--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>Typy_generyczne</groupId>
     <artifactId>Generyczne</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
+    </dependencies>
 
 </project>
